Fixed bug where macro variables kept their values across successive calls

--- a/hwhile.cabal
+++ b/hwhile.cabal
@@ -25,11 +25,11 @@ library
   exposed-modules:      Lexer,
                         Parser,
                         SugarSyntax,
+                        Desugar,
                         PureSyntax,
                         PureInterpreter,
                         LoggingInterpreter,
-                        Unparser,
-                        HWhileUtils
+                        Unparser
 
 executable hwhile
   default-language:     Haskell2010
