--- a/hwhile.cabal
+++ b/hwhile.cabal
@@ -18,7 +18,7 @@ cabal-version:          >=1.10
 library
   default-language:     Haskell2010
   hs-source-dirs:       src/lib
-  build-depends:        base >=4.8 && <4.9,
+  build-depends:        base >=4.8,
                         containers >=0.5 && <0.6,
                         array >=0.5 && <0.6,
                         filepath
@@ -34,7 +34,7 @@ library
 executable hwhile
   default-language:     Haskell2010
   hs-source-dirs:       src/exec
-  build-depends:        base >=4.8 && <4.9,
+  build-depends:        base >=4.8,
                         containers >=0.5 && <0.6,
                         array >=0.5 && <0.6,
                         filepath,
@@ -45,7 +45,7 @@ executable hwhile
 Test-Suite hwhile-testsuite
   default-language:     Haskell2010
   hs-source-dirs:       src/test
-  build-depends:        base >=4.8 && <4.9,
+  build-depends:        base >=4.8,
                         containers >=0.5 && <0.6,
                         array >=0.5 && <0.6,
                         Cabal,
