--- a/hwhile.cabal
+++ b/hwhile.cabal
@@ -23,7 +23,7 @@ library
                         array >=0.5 && <0.6,
                         filepath
   exposed-modules:      Lexer,
-                        Parser,
+                        SourceParser,
                         SugarSyntax,
                         Desugar,
                         PureSyntax,
