Broke the desugaring into two stages. Macros first, then switches. An extra syntax module is needed, called InterSyntax, which sits between SugarSynax and PureSyntax. InterSyntax does not have macros like SugarSyntax, but it has switches which PureSyntax lacks.

--- a/hwhile.cabal
+++ b/hwhile.cabal
@@ -25,7 +25,9 @@ library
   exposed-modules:      Lexer,
                         SourceParser,
                         SugarSyntax,
-                        Desugar,
+                        DesugarSI,
+                        InterSyntax,
+                        DesugarIP,
                         PureSyntax,
                         PureInterpreter,
                         LoggingInterpreter,
