--- a/hwhile.cabal
+++ b/hwhile.cabal
@@ -21,7 +21,8 @@ library
   build-depends:        base >=4.8,
                         containers >=0.5 && <0.6,
                         array >=0.5 && <0.6,
-                        filepath
+                        filepath,
+                        mtl
   exposed-modules:      Lexer,
                         SourceParser,
                         SugarSyntax,
@@ -31,6 +32,7 @@ library
                         PureSyntax,
                         PureInterpreter,
                         LoggingInterpreter,
+                        REPL,
                         Unparser
 
 executable hwhile
