--- a/hwhile.cabal
+++ b/hwhile.cabal
@@ -22,13 +22,13 @@ Source-Repository head
 library
   default-language:     Haskell2010
   hs-source-dirs:       src/lib
-  build-depends:        base >=4.8 && <4.11,
+  build-depends:        base >=4.6 && <5.0,
                         containers >=0.5 && <0.6,
                         array >=0.5 && <0.6,
-                        filepath,
-                        haskeline,
-                        repline,
-                        mtl
+                        filepath >=1.2 && <1.5,
+                        haskeline >=0.7 && <0.8,
+                        repline >=0.1.6 && <0.1.8,
+                        mtl >=2.2 && <2.3
   exposed-modules:      Lexer,
                         SourceParser,
                         SugarSyntax,
